crates/tools/tests/e2e/snapshots/e2e__snapshot_tests__find_basic.snap
---
source: crates/tools/tests/e2e/snapshot_tests.rs
expression: redacted
---
{
  "count": 2,
  "entries": [
    {
      "depth": 0,
      "modified": "<modified>",
      "name": "a.rs",
      "path": "<path>",
      "permissions": "<permissions>",
      "size": "<size>",
      "type": "file"
    },
    {
      "depth": 0,
      "modified": "<modified>",
      "name": "b.md",
      "path": "<path>",
      "permissions": "<permissions>",
      "size": "<size>",
      "type": "file"
    }
  ],
  "root": "<root>",
  "truncated": false
}
