crates/tools/tests/e2e/snapshots/e2e__snapshot_tests__sqlite_query.snap
---
source: crates/tools/tests/e2e/snapshot_tests.rs
expression: r.data
---
{
  "columns": [
    "id",
    "name"
  ],
  "row_count": 2,
  "rows": [
    [
      1,
      "a"
    ],
    [
      2,
      "b"
    ]
  ]
}
