crates/tools/tests/e2e/snapshots/e2e__snapshot_tests__sqlite_tables.snap
---
source: crates/tools/tests/e2e/snapshot_tests.rs
expression: r.data
---
[
  {
    "columns": [
      {
        "data_type": "INTEGER",
        "name": "id",
        "not_null": false,
        "primary_key": true
      },
      {
        "data_type": "TEXT",
        "name": "name",
        "not_null": true,
        "primary_key": false
      }
    ],
    "name": "users"
  }
]
