crates/tools/tests/e2e/snapshots/e2e__snapshot_tests__wc_inline.snap
---
source: crates/tools/tests/e2e/snapshot_tests.rs
expression: r.data
---
{
  "bytes": 19,
  "chars": 19,
  "lines": 2,
  "words": 4
}
